# smart-info-navigator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  prd-smart-info-navigator.md  statusUpdate.md
backlog/: epic1.md  epic2.md  epic3.md  epic4.md  epic5.md  epic6.md  epic7.md  epic8.md
docker/: Dockerfile.mcp-server
mcp-server/: .env.example  AGENTS.md  README.md  alembic.ini  pyproject.toml
mcp-server/alembic/: env.py
mcp-server/alembic/versions/: 52254117488f_add_oauth_tables_clients_authorization_.py  5682052542e1_add_oauth_token_hashes.py  67a15d41b73e_describe_change.py  eb8d46f8d279_widen_oauth_token_columns.py  f3378c124740_initial_schema_users_tasks_task_audit_.py
mcp-server/postman/: oauth-flow.postman_collection.json  smart-info-navigator.postman_collection.json
mcp-server/src/: config.py  http_app.py  http_main.py  main.py
mcp-server/src/auth/: __init__.py  jwt_utils.py  middleware.py  oauth_routes.py  pkce.py  token_utils.py
mcp-server/src/database/: __init__.py
mcp-server/src/models/: __init__.py  database.py  oauth.py  response.py  task.py  workflow.py
mcp-server/src/services/: email_service.py
mcp-server/src/tools/: integrations.py  tasks.py
mcp-server/src/utils/: logging.py
mcp-server/tests/: conftest.py  test_database.py  test_http_endpoints.py  test_oauth_endpoints.py  test_tools.py
plan/: implementation-order.md  mvp-implementation-plan.md
ui/: .env.example  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/.storybook/: main.ts  preview.ts
(+20 files in other folders)
